--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.3",
     "express": "^4.19.2",
+    "js-cookie": "^3.0.5",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.12.0",
     "react": "^18.3.1",
